Organização dos arquivos

--- a/html/edita-clientes.html
+++ b/html/edita-clientes.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">
       <img
-        src="./img/doguinho.png"
+        src="../img/doguinho.png"
         width="50"
         height="50"
         class="d-inline-block align-top"
@@ -59,9 +59,9 @@
   </form>
 
   <body>
-    <script src="./api/cliente.js"></script>
-    <script src="validaCPF.js"></script>
-    <script src="edita-cliente.js"></script>
+    <script src="../api/cliente.js"></script>
+    <script src="../js/validaCPF.js"></script>
+    <script src="../js/edita-cliente.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
