--- a/html/cadastro-clientes.html
+++ b/html/cadastro-clientes.html
@@ -17,14 +17,14 @@
       href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="clientes.css" />
-    <link rel="stylesheet" href="cadastro-clientes.css">
+    <link rel="stylesheet" href="../css/clientes.css" />
+    <link rel="stylesheet" href="../css/cadastro-clientes.css">
     <title>PetShop!</title>
   </head>
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">
       <img
-        src="./img/doguinho.png"
+        src="../img/doguinho.png"
         width="50"
         height="50"
         class="d-inline-block align-top"
@@ -57,9 +57,9 @@
   </form>
 
   <body>
-    <script src="./api/cliente.js"></script>
-    <script src="./cadastro-clientes.js"></script>
-    <script src="./validaCPF.js"></script>
+    <script src="../api/cliente.js"></script>
+    <script src="../js/cadastro-clientes.js"></script>
+    <script src="../js/validaCPF.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
