--- a/html/clientes.html
+++ b/html/clientes.html
@@ -17,13 +17,13 @@
       href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="clientes.css" />
+    <link rel="stylesheet" href="../css/clientes.css" />
     <title>PetShop!</title>
   </head>
   <nav class="navbar navbar-light bg-light">
     <a class="navbar-brand" href="#">
       <img
-        src="./img/doguinho.png"
+        src="../img/doguinho.png"
         width="50"
         height="50"
         class="d-inline-block align-top"
@@ -57,8 +57,8 @@
   </table>
 
   <body>
-    <script src="./api/cliente.js"></script>
-    <script src="./listagem-clientes.js"></script>
+    <script src="../api/cliente.js"></script>
+    <script src="../js/listagem-clientes.js"></script>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
